# fmi-cli

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
fmi_cli/: __init__.py  airquality.py  api.py  observable_property.py  point.py  radiation.py  station.py  stored_query.py  weather.py  xml_helpers.py
tests/: test_airquality.py  test_api.py  test_meta.py  test_radiation.py  test_weather.py
